# Scanner_OP

./: LICENSE  README.md
A4-paper-sheet-detection-and-cropping/: Hough  Hough.cpp  Hough.h  Warping.cpp  Warping.h  a.out  add_padding.py  main.cpp  main2.cpp  preprocessing.py
A4-paper-sheet-detection-and-cropping/Header_files/: CImg.h
A4-paper-sheet-detection-and-cropping/Header_files/eigen/doc/: SparseLinearSystems.dox
corners_cpp/: canny_example.cpp  corners.cpp  hough_example.cpp  main.cpp
scannar_web/NodejsAddons/: a.out  image-inverter.cpp  info.txt  package-lock.json  package.json
scripts/: app  cv.sh  install-opencv4.sh  opencvInstall.sh  opencv_version.cpp  rename_images.py
src/: .gitignore
src/corners_cpp/: CMakeLists.txt  corners.cpp  corners.hpp  main.cpp
src/corners_cpp/examples/: CMakeLists.txt  canny_example.cpp
src/ex01/: canny.py
src/ex02/: canny.ipynb  canny.py
src/ex03/: README.md  thresholding.py
src/ex04/: app  blackWhite.ipynb  filter.cpp  filter2.cpp  filters.ipynb  tophat.cpp
src/ex05/: bwfilter.py
src/filters_cpp/: CMakeLists.txt  filters.cpp  filters.hpp  imgtxtenh.cpp
src/filters_cpp/src/: filters.cpp  filters.hpp  htrprep.cpp  htrprep.hpp  img_enhance.cpp  img_enhance.hpp  img_opencv.cpp  img_opencv.hpp  imgconv.cpp  imgconv.hpp  intimg.cpp  intimg.hpp  log.cpp  main.cpp  mem.cpp  mem.hpp  objs.cpp  objs.hpp
src/imgtxtenh/: CMakeLists.txt  README.md
src/imgtxtenh/src/: htrprep.c  htrprep.h  imgconv.c  imgconv.h  imgtxtenh.c  intimg.c  intimg.h  objs.c  objs.h
src/opencvjs/: index.html
(+63 files in other folders)
